# om-glossary-mcp-server

./: Makefile  README.md  pyproject.toml  requirements.txt
src/: __main__.py  config.py  main.py  openmetadata.py  server.py
src/mcp_components/: resources.py  tools.py
