[project]
name = "mcp-server-openmetadata"
version = "0.1.0"
description = "Model Context Protocol (MCP) server for OpenMetadata"
authors = [
    { name = "Gyeongmo Yang", email = "me@gmyang.dev" }
]
dependencies = [
    "httpx>=0.24.1",
    "click>=8.1.7",
    "mcp>=0.1.0",
    "anyio>=4.2.0",
    "starlette>=0.36.3",
    "uvicorn>=0.27.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["mcp", "openmetadata", "metadata", "model-context-protocol"]

[project.optional-dependencies]
dev = [
    "build>=1.2.2.post1",
    "twine>=6.1.0",
]

[project.urls]
Homepage = "https://github.com/yangkyeongmo/mcp-server-openmetadata"
Repository = "https://github.com/yangkyeongmo/mcp-server-openmetadata.git"
"Bug Tracker" = "https://github.com/yangkyeongmo/mcp-server-openmetadata/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp-server-openmetadata = "src.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
exclude = [
    "**/__pycache__",
    "**/*.py[cod]",
    "**/*.so",
]

[tool.hatch.build]
include = [
    "src/**/*.py",
    "README.md",
    "LICENSE",
]
exclude = [
    "**/__pycache__",
    "**/*.py[cod]",
    "**/*.so",
]
