[project]
name = "mcp-server-openmetadata"
version = "0.1.0"
description = "Model Context Protocol (MCP) server for OpenMetadata"
authors = [
    { name = "Gyeongmo Yang", email = "me@gmyang.dev" }
]
dependencies = [
    "httpx>=0.24.1",
    "click>=8.1.7",
    "mcp>=0.1.0",
    "anyio>=4.2.0",
    "starlette>=0.36.3",
    "uvicorn>=0.27.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["mcp", "openmetadata", "metadata", "model-context-protocol"]

[project.optional-dependencies]
dev = [
    "build>=1.2.2.post1",
    "twine>=6.1.0",
    "ruff>=0.2.1",
]

[project.urls]
Homepage = "https://github.com/yangkyeongmo/mcp-server-openmetadata"
Repository = "https://github.com/yangkyeongmo/mcp-server-openmetadata.git"
"Bug Tracker" = "https://github.com/yangkyeongmo/mcp-server-openmetadata/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp-server-openmetadata = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
exclude = [
    "**/__pycache__",
    "**/*.py[cod]",
    "**/*.so",
]

[tool.hatch.build]
include = [
    "src/**/*.py",
    "README.md",
    "LICENSE",
]
exclude = [
    "**/__pycache__",
    "**/*.py[cod]",
    "**/*.so",
]

[tool.ruff]
line-length = 120
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]

[tool.ruff.isort]
known-first-party = ["src"]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
